test/sema/typeck/lambda/variadic-type-not-last.out
error: variadic parameter needs to be last.
--> variadic-type-not-last.dora:1:12
 | fn f(_sum: (Int32..., Int32): Int32) {}
              ~~~~~~~~~~~~~~~~~~~~~~~~
 | 
1 error found.
