test/sema/typeck/lambda/variadic-type-not-last.dora
fn f(_sum: (Int32..., Int32): Int32) {}
